--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>POC Berhasil</h1>
-    <p>Proof of Concept (POC) Anda telah berhasil diimplementasikan.</p>
+    '><script>alert('POC_Berhasil')</script>
 </body>
 </html>
