--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>POC Berhasil</h1>
-    '><script>alert('POC_Berhasil')</script>
+    <h1>'<script>alert('POC_Berhasil')</script></h1>
 </body>
 </html>
